# wasm-micro-runtime

.github/scripts/: fetch_compare_version.py
.github/workflows/: _build_iwasm_release.yml  _create_tag.yml  build_iwasm_release.yml  build_llvm_libraries.yml  build_wamr_vscode_ext.yml  build_wamrc.yml  compilation_on_android_ubuntu.yml  compilation_on_macos.yml  nightly_run.yml  release_process.yml  supply_chain.yml  test.yml
build-scripts/: config_common.cmake  runtime_lib.cmake
core/: config.h
core/iwasm/aot/: aot_loader.c  aot_reloc.h  aot_runtime.c  aot_runtime.h
core/iwasm/common/: wasm_loader_common.c  wasm_loader_common.h  wasm_memory.c  wasm_runtime_common.c  wasm_runtime_common.h
core/iwasm/compilation/: aot.c  aot_emit_memory.c  aot_llvm.c  aot_llvm.h
core/iwasm/include/: lib_export.h  wasm_c_api.h  wasm_export.h
core/iwasm/interpreter/: wasm.h  wasm_interp_classic.c  wasm_interp_fast.c  wasm_loader.c  wasm_mini_loader.c  wasm_runtime.c  wasm_runtime.h
core/shared/utils/: runtime_timer.c
samples/basic/src/: main.c
samples/native-acl/: CMakeLists.txt  README.md  build.sh  run.sh
samples/native-acl/src/: main.c  native_impl.c
samples/native-acl/wasm-app/: CMakeLists.txt  acl_app.c
samples/shared-heap/src/: shared_heap_chain.c
samples/workload/: README.md
test-tools/wamr-ide/VSCode-Extension/: package.json
tests/unit/: CMakeLists.txt  unit_common.cmake
tests/unit/shared-heap/: shared_heap_test.cc
tests/unit/wasm-c-api/: CMakeLists.txt
tests/wamr-test-suites/: test_wamr.sh
wamr-compiler/: CMakeLists.txt
(+4 files in other folders)
